Fixed alignment issue. Purgecss config was the problem.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -13,11 +13,3 @@
     font-size: 1.5rem;
     color: red;
 }
-
-.alignleft > img {
-    float: left;
-}
-
-.article-content > div {
-    margin-left: -40px;
-}
